# baron-EVM

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  publish.sh
bins/bcevm-test/: Cargo.toml  LICENSE
bins/bcevme/: Cargo.toml
bins/bcevme/src/: cmd.rs  main.rs
bins/bcevme/src/cmd/: bytecode.rs  evmrunner.rs  format_kzg_setup.rs  statetest.rs
bins/bcevme/src/cmd/statetest/: merkle_trie.rs  runner.rs  utils.rs
bins/bcevme/src/cmd/statetest/models/: deserializer.rs  mod.rs  spec.rs
crates/bcevm/: Cargo.toml  LICENSE
crates/bcevm/benches/: bench.rs
crates/bcevm/src/: builder.rs  context.rs  db.rs  evm.rs  frame.rs  handler.rs  inspector.rs  journaled_state.rs  lib.rs  optimism.rs  test_utils.rs
crates/bcevm/src/context/: context_precompiles.rs  evm_context.rs  inner_evm_context.rs
crates/bcevm/src/db/: alloydb.rs  emptydb.rs  ethersdb.rs  in_memory_db.rs  states.rs
crates/bcevm/src/db/states/: bundle_account.rs  bundle_state.rs  cache.rs  cache_account.rs  changes.rs  plain_account.rs  reverts.rs  state.rs  state_builder.rs  transition_account.rs  transition_state.rs
crates/bcevm/src/handler/: handle_types.rs  mainnet.rs  register.rs
crates/bcevm/src/handler/handle_types/: execution.rs  post_execution.rs  pre_execution.rs  validation.rs
crates/bcevm/src/handler/mainnet/: execution.rs  post_execution.rs  pre_execution.rs  validation.rs
crates/bcevm/src/inspector/: customprinter.rs  eip3155.rs  gas.rs  handler_register.rs  noop.rs
crates/bcevm/src/optimism/: handler_register.rs  l1block.rs
crates/interpreter/: Cargo.toml  LICENSE
crates/interpreter/src/: function_stack.rs  gas.rs  host.rs  instruction_result.rs  instructions.rs  interpreter.rs  interpreter_action.rs  lib.rs  macros.rs  opcode.rs
crates/interpreter/src/instructions/: bitwise.rs  contract.rs  control.rs  data.rs  host.rs
crates/interpreter/src/instructions/contract/: call_helpers.rs
crates/interpreter/src/interpreter/: analysis.rs  contract.rs  serde.rs  shared_memory.rs  stack.rs
crates/interpreter/src/interpreter_action/: call_inputs.rs  call_outcome.rs  create_inputs.rs  create_outcome.rs  eof_create_inputs.rs  eof_create_outcome.rs
crates/interpreter/src/opcode/: eof_printer.rs
crates/interpreter/tests/: eof.rs
crates/precompile/: Cargo.toml
crates/precompile/benches/: bench.rs
crates/precompile/src/: blake2.rs  bn128.rs  hash.rs  identity.rs  kzg_point_evaluation.rs  lib.rs  modexp.rs  secp256k1.rs  utilities.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: env.rs  kzg.rs  lib.rs  precompile.rs  result.rs  specification.rs  state.rs  utilities.rs
examples/: db_by_ref.rs  fork_ref_transact.rs  generate_block_traces.rs  uniswap_v2_usdc_swap.rs
