[package]
name = "bcevm-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bcevm = { path = "../../crates/bcevm", version = "8.0.0", default-features = false }
alloy-sol-macro = "0.7.0"
alloy-sol-types = "0.7.0"
bytes = "1.6"
eyre = "0.6.12"
hex = "0.4"
microbench = "0.5"
regex = "1.10.4"

[[bin]]
name = "analysis"

[[bin]]
name = "snailtracer"

[[bin]]
name = "transfer"

[[bin]]
name = "burntpix"
