[package]
name = "bcevme"
version = "0.4.0"
edition = "2021"
authors = ["BC"]
description = "Rust Ethereum Virtual Machine Executable"
license = "MIT"
repository = "https://github.com/baron-chain/bcevm"
keywords = ["ethereum", "evm"]

[dependencies]
bcevm = { path = "../../crates/bcevm", version = "8.0.0", default-features = false, features = ["ethersdb", "std", "serde-json", "c-kzg"] }
alloy-rlp = { version = "0.3", default-features = false, features = ["arrayvec", "derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
k256 = { version = "0.13.3", features = ["ecdsa"] }
hash-db = "0.15"
hex = "0.4"
hashbrown = "0.14"
indicatif = "0.17"
microbench = "0.5"
plain_hasher = "0.2"
structopt = "0.3"
thiserror = "1.0"
triehash = "0.8"
walkdir = "2.5"
