[package]
name = "bcevm-precompile"
version = "6.0.0"
edition = "2021"
authors = ["BC"]
description = "bcevm Precompiles - Ethereum compatible precompiled contracts"
license = "MIT"
repository = "https://github.com/baron-chain/bcevm"
keywords = ["no_std", "ethereum", "evm", "bcevm", "precompiles"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bcevm-primitives = { path = "../primitives", version = "3.1.1", default-features = false }
bn = { package = "substrate-bn", version = "0.6", default-features = false }
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
ripemd = { version = "0.1", default-features = false }
sha2 = { version = "0.10", default-features = false }
aurora-engine-modexp = { version = "1.1", default-features = false }
c-kzg = { version = "1.0.0", default-features = false, optional = true }
k256 = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
secp256k1 = { version = "0.29.0", default-features = false, features = ["alloc", "recovery", "rand", "global-context"], optional = true }

[dev-dependencies]
criterion = "0.5"
rand = { version = "0.8", features = ["std"] }

[features]
default = ["std", "c-kzg", "secp256k1", "portable"]
std = ["bcevm-primitives/std", "k256/std", "once_cell/std", "ripemd/std", "sha2/std", "c-kzg?/std", "secp256k1?/std"]
hashbrown = ["bcevm-primitives/hashbrown"]
asm-keccak = ["bcevm-primitives/asm-keccak"]
optimism = ["bcevm-primitives/optimism"]
optimism-default-handler = ["optimism", "bcevm-primitives/optimism-default-handler"]
negate-optimism-default-handler = ["bcevm-primitives/negate-optimism-default-handler"]
c-kzg = ["dep:c-kzg", "bcevm-primitives/c-kzg"]
portable = ["bcevm-primitives/portable", "c-kzg?/portable"]
secp256k1 = ["dep:secp256k1"]

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
